@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.544 2005/12/24 17:29:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.545 2005/12/25 05:06:35 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   24 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   use separate script for GRP deps
+  remove calls to portage module
   src/runtimedeps.py:
   initial commit
 
